--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,7 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <h1>
-    DatingApp
-  </h1>
-  <app-values></app-values>
-</div>
+<app-nav></app-nav>
+<app-home></app-home> 
+
