--- a/DatingApp-SPA/src/app/home/home.component.css
+++ b/DatingApp-SPA/src/app/home/home.component.css
@@ -1,7 +1,7 @@
-.body {
+/* .body {
         background-image: url('../image/singlemingle.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
         height: 600px;
-      }
+      } */
